# WexSetup

./: .gitignore  Dockerfile  README.md  nginx.conf
.github/workflows/: publish-installers.yml
desktop/: README.md  index.html  main.js  package-lock.json  package.json
desktop/scripts/: install-macos.sh  install-ubuntu.sh  install-windows.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
installers/macos/: WexioDesktop.dmg
site/: index.html
site/Linux/: index.html
site/linux/: index.html
site/macOS/: index.html
site/macos/: index.html
site/windows/: index.html
