[package]
name = "wexio_desktop"
version = "1.0.0"
description = "Native Wexio desktop wrapper"
authors = ["Wexio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "window-create", "shell-open"] }
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
