[package]
name = "wexio_desktop"
version = "1.0.0"
description = "Native Wexio desktop wrapper"
authors = ["Wexio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.9", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "window-create", "shell-open"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process", "net"] }
url = "2"
whoami = "1.5.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
