[package]
name = "wexio_desktop"
version = "1.0.1"
description = "Native Wexio desktop wrapper"
authors = ["Wexio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-create", "shell-open"] }
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
